# project-armtoe

./: README.md
module_AI/src/: opencv_test
module_CV/src/: CMakeLists.txt  image_recognize.cpp  image_recognize.h
